<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_tasks">Enter Task</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="reminder">Reminder</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="register">Register</string>
    <string name="no_task">There has no tasks to do!</string>
    <string name="notice">If you has no account to login, please register!</string>
    <string name="change_theme">Change Theme</string>
    <string name="all_tasks">All Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="umcomplete_tasks">UmComplete Tasks</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_tasks">HomeTasks</string>
</resources>