<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/all_task"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/all_tasks" />
    <item
        android:id="@+id/complete_task"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/completed_tasks" />
    <item
        android:id="g@+id/umcomplete_task"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/umcomplete_tasks" />
    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />


    <item
        android:id="@+id/todo1"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="nyeinnyeinaye" />

    <item
        android:id="@+id/jean"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="Ingyinn Swe" />


    <item
        android:id="@+id/thitlwin"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="Thit Lwin" />

</menu>
